# tapl

./: .atom-build.yaml  .hlint.yaml  LICENSE  hie.yaml  package.yaml  stack.yaml  tapl.cabal
src/Revisited/: Bool.hs
src/Revisited/B/: Semantics.hs  Syntax.hs
src/Revisited/Bool/: Syntax.hs
src/Revisited/NB/: Semantics.hs  Syntax.hs
src/Revisited/Untyped/: Semantics.hs  Syntax.hs
src/Sec10/: Parser.hs  SimplyTyped.hs
src/Sec11/: Sec11.md  Sec11_9.md  SimplyTypedLet.hs
src/Sec12/: Sec12.md
src/Sec13/: Sec13.md  Sec13_4.md
src/Sec14/: Sec14.md
src/Sec15/: Sec15.md  Sec15_4.md  Sec15_6.md
src/Sec16/: Sec16.md
src/Sec17/: Ex3_1.hs  Ex3_2.hs  Subtyping.hs
src/Sec18/: Makefile  Sec18.saty  Sec18.satysfi-aux  code.satyh  local.satyh  stdjareport-tapl.satyh
src/Sec19/: Sec19.saty  Sec19.satysfi-aux  local.satyh  stdjareport-tapl.satyh
src/Sec20/: Makefile  RecursiveTypes.hs  Sec20.saty  Sec20.satysfi-aux  code.satyh  stdjareport-tapl-mac.satyh
src/Sec21/: Sec21.saty  Sec21.satysfi-aux  code.satyh  local.satyh  stdjareport-tapl-ubu.satyh
src/Sec4/: Arith.hs  Ex4_2_1.hs  Ex4_2_2.hs
src/Sec5/: Ex5.html  Ex5.js
src/Sec6/: Sec6.md
src/Sec7/: Ex7_3_1.hs  Untyped.hs
src/Sec8/: Sec8.md
src/Sec9/: Sec9.md
test/Sec10/: ParserSpec.hs  SimplyTypedSpec.hs
test/Sec11/: SimplyTypedLetSpec.hs
